Slight code update
* disabled add to cart if plant already added

* updated css

--- a/src/ProductList.css
+++ b/src/ProductList.css
@@ -214,8 +214,9 @@ body {
   .product-button:disabled {
     background-color: #ccc;
     color: #666;
+    cursor: not-allowed;
   }
-
+  
   .cart-quantity {
     background-color: red;
     color: white;
